--- a/sticker-lentes/css/styles.css
+++ b/sticker-lentes/css/styles.css
@@ -31,7 +31,7 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-#pacienteFoto {
+#stickerFoto {
   width: 150px;
   height: 100px;
   position: absolute;
